tests/files/flow_controller_tests/should_run/073.cmdr
x = 10;
print csc(x);