tests/files/flow_controller_tests/should_fail/052.cmdr
x = true;
print csc(x);